<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Baykus35</string>
    <string name="title_tariff">Tarife Bilgisi</string>
    <string name="title_route">Güzergah</string>
    <string name="title_info">Bilgi</string>
    <string name="tariff_stop">%s kalkış</string>
    <string name="about_info">Baykus35 ESHOT Genel Müdürlüğü tarafından 
        				sağlanan Gece Otobüs sefer tarifelerini sunan bir uygulamadır.
        				Uygulamada geçen tarife bilgilerine www.eshot.gov.tr adresi 
        				üzerinden de erişilebilir.</string>
    <string name="about_info_extra1">*Haritadaki otobüs durak yerleri 
        				yaklaşık konumları ile  gösterilmektedir.</string>
    <string name="about_info_extra2">*Haritadaki otobüs duraklarına 
	    olan uzaklıklar kuş uçuşu hesaplanmaktadır.</string>
    <string name="about_info_extra3">Uygulama ile ilgili her türlü şikayet 
        ve önerilerinizi baykusotuzbes@gmail.com adresine gönderebilirsiniz.</string>
    <string name="network_unavailable">Harita özelliğini doğru ve verimli kullanabilmeniz için internet bağlantınızın bulunması gerekmektedir.</string>
    <string name="error_title">Uyarı</string>
    <string name="distance_meters">Bu durağa yaklaşık %.2f metre uzaklıktasınız.</string>
    <string name="distance_kilometers">Bu durağa yaklaşık %.2f kilometre uzaklıktasınız.</string>
    <string name="take_me_to_this_stop">Beni bu durağa götür!</string>
    <string name="click_to_navigate">Bu durağa navigasyon başlatmak için tıklayın.</string>
    <string name="cancel_action">Vazgeç</string>
    <string name="enable_gps_text">Cihazınızda GPS özelliği kapalı. Şu an bunu açmak ister misiniz?</string>
    <string name="go_to_gps_settings">GPS Ayar Ekranına Git</string>

</resources>