<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TariffsActivity" >

    <ImageView
        android:layout_marginTop="@dimen/fragment_about_img_view_margin_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/img_aboutlogo"
        android:contentDescription="@string/app_name" />

    <com.onurersen.baykus35.customization.CustomTextView
        android:id="@+id/aboutInfoView"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_info"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/fragment_about_info_view_padding_top"
        android:paddingLeft="@dimen/fragment_about_info_view_padding_left"
        android:textSize="@dimen/fragment_about_info_view_text_size" />

    <com.onurersen.baykus35.customization.CustomTextView
        android:id="@+id/aboutInfoExtra1"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_info_extra1"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/fragment_about_info_extra_1_view_padding_top"
        android:paddingLeft="@dimen/fragment_about_info_extra_1_view_padding_left"
        android:textSize="@dimen/fragment_about_info_extra_1_view_text_size" />

    <com.onurersen.baykus35.customization.CustomTextView
        android:id="@+id/aboutInfoExtra2"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_info_extra2"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/fragment_about_info_extra_2_view_padding_top"
        android:paddingLeft="@dimen/fragment_about_info_extra_2_view_padding_left"
        android:textSize="@dimen/fragment_about_info_extra_2_view_text_size" />
    
    <com.onurersen.baykus35.customization.CustomTextView
        android:id="@+id/aboutInfoExtra3"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_info_extra3"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/fragment_about_info_extra_3_view_padding_top"
        android:paddingLeft="@dimen/fragment_about_info_extra_3_view_padding_left"
        android:textSize="@dimen/fragment_about_info_extra_3_view_text_size" />

</LinearLayout>